crates/toml_edit/tests/snapshots/invalid/float/leading-zero.stderr
TOML parse error at line 1, column 16
  |
1 | leading-zero = 03.14
  |                ^
unexpected leading zero, expected nothing
